--- a/HTML-Cheatsheet.html
+++ b/HTML-Cheatsheet.html
@@ -21,6 +21,16 @@
       <span>some text here</span>
     </div>
 
+    <header>
+      <nav></nav>
+    </header>
+    
+    <section></section>
+
+    <footer>
+
+    </footer>
+
     <h1>A Heading</h1>
 
     <p>
