--- a/CSS-HTML-Helper.html
+++ b/CSS-HTML-Helper.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" type="text/css" href="CSS-Cheatsheet.css" >
   </head>
 
