--- a/CSS-HTML-Helper.html
+++ b/CSS-HTML-Helper.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="second">
-      <span class="link">
+      <span class="link spanning">
           This is using an ID, inside of a span. <br>
         <a href="https://google.com">A class inside ID</a>
       </span>
